--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.13.0",
     "@google/generative-ai": "^0.17.1",
     "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.3.31",
     "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
